More CSS fixes to tooltip popup on mobile

--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ transition: all 1s ease;
 .shipping-container {
   width: 80%;
   max-height: 500px;
-  margin: 60px auto;
+  margin: 75px auto 0px auto;
   max-width: 750px;
 }
 
@@ -335,7 +335,7 @@ transition: all 1s ease;
 
 @media only screen and (max-width:420px) {
   .tooltip-msg-container {
-  bottom: calc(100% - 68%);
+  bottom: calc(100% - 72%);
   left: calc(100% - 90%);
 }
 
